--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">lunadorii</string>
+    <string name="facebook_app_id">301124970649785</string>
+    <string name="fb_login_protocol_scheme">fb301124970649785</string>
 </resources>
